Add source for jdk_1.4.2