@@ -58,13 +58,8 @@ package org.apache.xalan.processor;
 
 import org.apache.xml.utils.StringToIntTable;
 
-import java.lang.IllegalAccessException;
-import java.lang.IndexOutOfBoundsException;
-import java.lang.InstantiationException;
-import java.lang.NoSuchMethodException;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.lang.StringBuffer;
 
 import java.util.StringTokenizer;
 import java.util.Vector;
@@ -77,10 +72,12 @@ import org.apache.xalan.res.XSLTErrorResources;
 import org.apache.xml.utils.QName;
 import org.apache.xml.utils.SystemIDResolver;
 import org.apache.xml.utils.StringVector;
+import org.apache.xml.utils.XMLChar;
 import org.apache.xpath.XPath;
 
 import javax.xml.transform.TransformerException;
 
+ 
 /**
  * This class defines an attribute for an element in a XSLT stylesheet,
  * is meant to reflect the structure defined in http://www.w3.org/TR/xslt#dtd, and the
@@ -88,24 +85,32 @@ import javax.xml.transform.TransformerException;
  */
 public class XSLTAttributeDef
 {
-
+   // How to handle invalid values for this attribute 
+   static final int FATAL = 0;
+   static final int ERROR = 1;
+   static final int WARNING = 2;
+   
+   
   /**
    * Construct an instance of XSLTAttributeDef.
    *
    * @param namespace The Namespace URI, or an empty string.
    * @param name The local name (without prefix), or empty string if not namespace processing.
    * @param type One of T_CDATA, T_URL, T_AVT, T_PATTERN, T_EXPR, T_CHAR,
-   * T_PRIORITY, T_YESNO, T_QNAME, T_QNAMES, T_ENUM, T_SIMPLEPATTERNLIST,
-   * T_NMTOKEN, T_STRINGLIST, T_PREFIX_URLLIST.
+   * T_NUMBER, T_YESNO, T_QNAME, T_QNAMES, T_ENUM, T_SIMPLEPATTERNLIST,
+   * T_NMTOKEN, T_STRINGLIST, T_PREFIX_URLLIST, T_ENUM_OR_PQNAME, T_NCNAME.
    * @param required true if this is attribute is required by the XSLT specification.
+   * @param supportsAVT true if this attribute supports AVT's.
+   * @param errorType the type of error to issue if validation fails.  One of FATAL, ERROR, WARNING. 
    */
-  XSLTAttributeDef(String namespace, String name, int type, boolean required)
+  XSLTAttributeDef(String namespace, String name, int type, boolean required, boolean supportsAVT, int errorType)
   {
-
     this.m_namespace = namespace;
     this.m_name = name;
     this.m_type = type;
     this.m_required = required;
+    this.m_supportsAVT = supportsAVT;
+    this.m_errorType = errorType;
   }
 
   /**
@@ -114,19 +119,24 @@ public class XSLTAttributeDef
    * @param namespace The Namespace URI, or an empty string.
    * @param name The local name (without prefix), or empty string if not namespace processing.
    * @param type One of T_CDATA, T_URL, T_AVT, T_PATTERN, T_EXPR,
-   * T_CHAR, T_PRIORITY, T_YESNO, T_QNAME, T_QNAMES, T_ENUM,
-   * T_SIMPLEPATTERNLIST, T_NMTOKEN, T_STRINGLIST, T_PREFIX_URLLIST.
+   * T_CHAR, T_NUMBER, T_YESNO, T_QNAME, T_QNAMES, T_ENUM,
+   * T_SIMPLEPATTERNLIST, T_NMTOKEN, T_STRINGLIST, T_PREFIX_URLLIST, 
+   * T_ENUM_OR_PQNAME, T_NCNAME.
+   * @param supportsAVT true if this attribute supports AVT's. 
+   * @param errorType the type of error to issue if validation fails.  One of FATAL, ERROR, WARNING. 
    * @param defaultVal The default value for this attribute.
    */
-  XSLTAttributeDef(String namespace, String name, int type, String defaultVal)
+  XSLTAttributeDef(String namespace, String name, int type, boolean supportsAVT, int errorType, String defaultVal)
   {
 
     this.m_namespace = namespace;
     this.m_name = name;
     this.m_type = type;
     this.m_required = false;
+    this.m_supportsAVT = supportsAVT;  
+    this.m_errorType = errorType;      
     this.m_default = defaultVal;
-  }
+   }
 
   /**
    * Construct an instance of XSLTAttributeDef that uses two
@@ -135,19 +145,24 @@ public class XSLTAttributeDef
    * @param namespace The Namespace URI, or an empty string.
    * @param name The local name (without prefix), or empty string if not namespace processing.
    * @param required true if this attribute is required by the XSLT specification.
+   * @param supportsAVT true if this attribute supports AVT's.  
+   * @param prefixedQNameValAllowed If true, the type is T_ENUM_OR_PQNAME       
+   * @param errorType the type of error to issue if validation fails.  One of FATAL, ERROR, WARNING. 
    * @param k1 The XSLT name of the enumerated value.
    * @param v1 An integer representation of k1.
    * @param k2 The XSLT name of the enumerated value.
    * @param v2 An integer representation of k2.
-   */
-  XSLTAttributeDef(String namespace, String name, boolean required,
-                   String k1, int v1, String k2, int v2)
+    */
+  XSLTAttributeDef(String namespace, String name, boolean required, boolean supportsAVT, 
+                    boolean prefixedQNameValAllowed, int errorType, String k1, int v1, String k2, int v2)
   {
 
     this.m_namespace = namespace;
     this.m_name = name;
-    this.m_type = this.T_ENUM;
+	this.m_type = prefixedQNameValAllowed ? this.T_ENUM_OR_PQNAME : this.T_ENUM;    
     this.m_required = required;
+    this.m_supportsAVT = supportsAVT;    
+    this.m_errorType = errorType;    
     m_enums = new StringToIntTable(2);
 
     m_enums.put(k1, v1);
@@ -161,6 +176,9 @@ public class XSLTAttributeDef
    * @param namespace The Namespace URI, or an empty string.
    * @param name The local name (without prefix), or empty string if not namespace processing.
    * @param required true if this attribute is required by the XSLT specification.
+   * @param supportsAVT true if this attribute supports AVT's.
+   * @param prefixedQNameValAllowed If true, the type is T_ENUM_OR_PQNAME
+   * @param errorType the type of error to issue if validation fails.  One of FATAL, ERROR, WARNING.    * 
    * @param k1 The XSLT name of the enumerated value.
    * @param v1 An integer representation of k1.
    * @param k2 The XSLT name of the enumerated value.
@@ -168,14 +186,16 @@ public class XSLTAttributeDef
    * @param k3 The XSLT name of the enumerated value.
    * @param v3 An integer representation of k3.
    */
-  XSLTAttributeDef(String namespace, String name, boolean required,
-                   String k1, int v1, String k2, int v2, String k3, int v3)
+  XSLTAttributeDef(String namespace, String name, boolean required, boolean supportsAVT,
+                    boolean prefixedQNameValAllowed, int errorType, String k1, int v1, String k2, int v2, String k3, int v3)
   {
 
     this.m_namespace = namespace;
     this.m_name = name;
-    this.m_type = this.T_ENUM;
+	this.m_type = prefixedQNameValAllowed ? this.T_ENUM_OR_PQNAME : this.T_ENUM;    
     this.m_required = required;
+    this.m_supportsAVT = supportsAVT; 
+    this.m_errorType = errorType;      
     m_enums = new StringToIntTable(3);
 
     m_enums.put(k1, v1);
@@ -190,7 +210,9 @@ public class XSLTAttributeDef
    * @param namespace The Namespace URI, or an empty string.
    * @param name The local name (without prefix), or empty string if not namespace processing.
    * @param required true if this attribute is required by the XSLT specification.
-   * @param k1 The XSLT name of the enumerated value.
+   * @param supportsAVT true if this attribute supports AVT's.
+   * @param prefixedQNameValAllowed If true, the type is T_ENUM_OR_PQNAME
+   * @param errorType the type of error to issue if validation fails.  One of FATAL, ERROR, WARNING.    * @param k1 The XSLT name of the enumerated value.
    * @param v1 An integer representation of k1.
    * @param k2 The XSLT name of the enumerated value.
    * @param v2 An integer representation of k2.
@@ -199,15 +221,17 @@ public class XSLTAttributeDef
    * @param k4 The XSLT name of the enumerated value.
    * @param v4 An integer representation of k4.
    */
-  XSLTAttributeDef(String namespace, String name, boolean required,
-                   String k1, int v1, String k2, int v2, String k3, int v3,
-                   String k4, int v4)
+  XSLTAttributeDef(String namespace, String name, boolean required, boolean supportsAVT,
+                   boolean prefixedQNameValAllowed, int errorType, String k1, int v1, String k2, int v2, 
+                   String k3, int v3, String k4, int v4)
   {
 
     this.m_namespace = namespace;
     this.m_name = name;
-    this.m_type = this.T_ENUM;
+	this.m_type = prefixedQNameValAllowed ? this.T_ENUM_OR_PQNAME : this.T_ENUM;    
     this.m_required = required;
+    this.m_supportsAVT = supportsAVT;      
+    this.m_errorType = errorType; 
     m_enums = new StringToIntTable(4);
 
     m_enums.put(k1, v1);
@@ -236,8 +260,8 @@ public class XSLTAttributeDef
   // of a single character.-->
   T_CHAR = 6,
 
-  // <!-- Used for the type of an attribute value that is a priority. -->
-  T_PRIORITY = 7,
+  // <!-- Used for the type of an attribute value that is a number. -->
+  T_NUMBER = 7,
 
   // Used for boolean values
   T_YESNO = 8,
@@ -246,7 +270,8 @@ public class XSLTAttributeDef
   // gets expanded by the XSLT processor. -->
   T_QNAME = 9,
 
-  // <!-- Like qname but a whitespace-separated list of QNames. -->
+  // <!--Used for a whitespace-separated list of QNames where the non-prefixed
+  // entries are not to be placed in the default namespace. -->
   T_QNAMES = 10,
 
   // <!-- Used for enumerated values -->
@@ -262,11 +287,25 @@ public class XSLTAttributeDef
   T_STRINGLIST = 14,
 
   // Used for a list of white-space delimited strings.
-  T_PREFIX_URLLIST = 15;
+  T_PREFIX_URLLIST = 15,
+  
+  // Used for enumerated values, one of which could be a qname-but-not-ncname
+  T_ENUM_OR_PQNAME = 16,
+
+  // Used for the type of an attribute value that is a NCName
+  T_NCNAME = 17,
+  
+  // Used for QName attributes that are always AVT.  Prefix isn't resolved.
+  T_AVT_QNAME = 18,
+  
+  // Used for a list of QNames where non-prefixed items are to be resolved
+  // using the default namespace (This is only true for cdata-section-elements)
+  T_QNAMES_RESOLVE_NULL = 19;
+  
 
   /** Representation for an attribute in a foreign namespace. */
   static XSLTAttributeDef m_foreignAttr = new XSLTAttributeDef("*", "*",
-                                            XSLTAttributeDef.T_CDATA, false);
+                                            XSLTAttributeDef.T_CDATA,false, false, WARNING);
 
   /** Method name that objects may implement if they wish to have forein attributes set. */
   static String S_FOREIGNATTR_SETTER = "setForeignAttr";
@@ -310,8 +349,8 @@ public class XSLTAttributeDef
    * Get the type of this attribute value.
    *
    * @return One of T_CDATA, T_URL, T_AVT, T_PATTERN, T_EXPR, T_CHAR,
-   * T_PRIORITY, T_YESNO, T_QNAME, T_QNAMES, T_ENUM, T_SIMPLEPATTERNLIST,
-   * T_NMTOKEN, T_STRINGLIST, T_PREFIX_URLLIST.
+   * T_NUMBER, T_YESNO, T_QNAME, T_QNAMES, T_ENUM, T_SIMPLEPATTERNLIST,
+   * T_NMTOKEN, T_STRINGLIST, T_PREFIX_URLLIST, T_ENUM_OR_PQNAME.
    */
   int getType()
   {
@@ -337,6 +376,19 @@ public class XSLTAttributeDef
   private int getEnum(String key)
   {
     return m_enums.get(key);
+  }
+
+ /**
+   * If this element is of type T_ENUM, this will return
+   * an array of strings - the values in the enumeration
+   *
+   * @return An array of the enumerated values permitted for this attribute.
+   *
+   * @throws Throws NullPointerException if m_enums is null.
+   */
+  private String[] getEnumNames()
+  {
+    return m_enums.keys();
   }
 
   /**
@@ -379,6 +431,32 @@ public class XSLTAttributeDef
     return m_required;
   }
 
+  /**
+   * If true, this is attribute supports AVT's.
+   */
+  private boolean m_supportsAVT;
+
+  /**
+   * Get whether or not this attribute supports AVT's.
+   *
+   * @return true if this attribute supports AVT's.
+   */
+  boolean getSupportsAVT()
+  {
+    return m_supportsAVT;
+  }
+  
+  int m_errorType = this.WARNING;
+  
+  /**
+   * Get the type of error message to use if the attribute value is invalid.
+   *
+   * @return one of XSLAttributeDef.FATAL, XSLAttributeDef.ERROR, XSLAttributeDef.WARNING
+   */
+  int getErrorType()
+  {
+    return m_errorType;
+  }
   /**
    * String that should represent the setter method which which
    * may be used on objects to set a value that represents this attribute  
@@ -465,13 +543,14 @@ public class XSLTAttributeDef
    * in the attribute value template string.
    */
   AVT processAVT(
-          StylesheetHandler handler, String uri, String name, String rawName, String value)
+          StylesheetHandler handler, String uri, String name, String rawName, String value,
+          ElemTemplateElement owner)
             throws org.xml.sax.SAXException
   {
 
     try
     {
-      AVT avt = new AVT(handler, uri, name, rawName, value);
+      AVT avt = new AVT(handler, uri, name, rawName, value, owner);
 
       return avt;
     }
@@ -492,11 +571,26 @@ public class XSLTAttributeDef
    * @param value non-null string reference.
    *
    * @return The value argument.
+   * 
+   * @throws org.xml.sax.SAXException.
    */
   Object processCDATA(StylesheetHandler handler, String uri, String name,
-                      String rawName, String value)
+                      String rawName, String value, ElemTemplateElement owner)
+                      throws org.xml.sax.SAXException
   {
-    return value;
+  	if (getSupportsAVT()) {
+	    try
+	    {
+	      AVT avt = new AVT(handler, uri, name, rawName, value, owner);
+	      return avt;
+	    }
+	    catch (TransformerException te)
+	    {
+	      throw new org.xml.sax.SAXException(te);
+	    }  		
+  	} else {  	  	
+	    return value;
+  	}
   }
 
   /**
@@ -514,22 +608,38 @@ public class XSLTAttributeDef
    * @throws org.xml.sax.SAXException if the string is not a length of 1.
    */
   Object processCHAR(
-          StylesheetHandler handler, String uri, String name, String rawName, String value)
+          StylesheetHandler handler, String uri, String name, String rawName, String value, ElemTemplateElement owner)
             throws org.xml.sax.SAXException
   {
+	if (getSupportsAVT()) {
+	    try
+	    {
+	      AVT avt = new AVT(handler, uri, name, rawName, value, owner);
+	
+		  // If an AVT wasn't used, validate the value
+		  if ((avt.isSimple()) && (value.length() != 1)) {
+		  	handleError(handler, XSLTErrorResources.INVALID_TCHAR, new Object[] {name, value},null);
+            return null;
+		  }	
+	      return avt;
+	    }
+	    catch (TransformerException te)
+	    {
+	      throw new org.xml.sax.SAXException(te);
+	    }
+	} else {    
+	    if (value.length() != 1)
+	    {
+            handleError(handler, XSLTErrorResources.INVALID_TCHAR, new Object[] {name, value},null);
+            return null;
+	    }
 
-    if (value.length() != 1)
-    {
-      handler.error(
-        "An XSLT attribute of type T_CHAR must be only 1 character!", null);
-    }
-
-    return new Character(value.charAt(0));
+	    return new Character(value.charAt(0));
+	}
   }
 
   /**
-   * Process an attribute string of type T_ENUM into
-   * a int value.
+   * Process an attribute string of type T_ENUM into a int value.
    *
    * @param handler non-null reference to current StylesheetHandler that is constructing the Templates.
    * @param uri The Namespace URI, or an empty string.
@@ -537,16 +647,126 @@ public class XSLTAttributeDef
    * @param rawName The qualified name (with prefix).
    * @param value non-null string that represents an enumerated value that is
    * valid for this element.
+   * @param owner
    *
-   * @return An Integer representation of the enumerated value.
+   * @return An Integer representation of the enumerated value if this attribute does not support
+   *         AVT.  Otherwise, and AVT is returned.
    */
   Object processENUM(StylesheetHandler handler, String uri, String name,
-                     String rawName, String value)
+                     String rawName, String value, ElemTemplateElement owner)
+                     throws org.xml.sax.SAXException
   {
 
-    int enum = this.getEnum(value);
+	AVT avt = null;
+	if (getSupportsAVT()) {
+	    try
+	    {
+	      avt = new AVT(handler, uri, name, rawName, value, owner);
+	      
+	      // If this attribute used an avt, then we can't validate at this time.
+	      if (!avt.isSimple()) return avt;
+	    }
+	    catch (TransformerException te)
+	    {
+	      throw new org.xml.sax.SAXException(te);
+	    }
+	}    
+	
+    int retVal = this.getEnum(value);
+    
+	if (retVal == StringToIntTable.INVALID_KEY) 
+    {
+       StringBuffer enumNamesList = getListOfEnums();
+       handleError(handler, XSLTErrorResources.INVALID_ENUM,new Object[]{name, value, enumNamesList.toString() },null);
+       return null;
+    }
 
-    return new Integer(enum);
+	if (getSupportsAVT()) return avt;
+	else return new Integer(retVal);	
+
+  }
+
+  /**
+   * Process an attribute string of that is either an enumerated value or a qname-but-not-ncname.
+   * Returns an AVT, if this attribute support AVT; otherwise returns int or qname.
+   *
+   * @param handler non-null reference to current StylesheetHandler that is constructing the Templates.
+   * @param uri The Namespace URI, or an empty string.
+   * @param name The local name (without prefix), or empty string if not namespace processing.
+   * @param rawName The qualified name (with prefix).
+   * @param value non-null string that represents an enumerated value that is
+   * valid for this element.
+   * @param owner
+   *
+   * @return AVT if attribute supports AVT. An Integer representation of the enumerated value if
+   *         attribute does not support AVT and an enumerated value was used.  Otherwise a qname
+   *         is returned.
+   */
+  Object processENUM_OR_PQNAME(StylesheetHandler handler, String uri, String name,
+                     String rawName, String value, ElemTemplateElement owner)
+                     throws org.xml.sax.SAXException
+  {
+
+	Object objToReturn = null;
+	
+	if (getSupportsAVT()) {
+	    try
+	    {
+	      AVT avt = new AVT(handler, uri, name, rawName, value, owner);
+	      if (!avt.isSimple()) return avt;
+	      else objToReturn = avt;
+	    }  
+	    catch (TransformerException te)
+	    {
+	      throw new org.xml.sax.SAXException(te);
+	    }
+	}    
+	
+    // An avt wasn't used.
+  	int enum = this.getEnum(value);
+    
+    if (enum != StringToIntTable.INVALID_KEY) 
+    {
+        if (objToReturn == null) objToReturn = new Integer(enum);
+    }
+
+    // enum not used.  Validate qname-but-not-ncname.
+    else
+    {
+        try 
+        {
+			QName qname = new QName(value, handler, true);
+            if (objToReturn == null) objToReturn = qname;	
+	        
+			if (qname.getPrefix() == null) {
+	           StringBuffer enumNamesList = getListOfEnums();
+
+ 	           enumNamesList.append(" <qname-but-not-ncname>");
+               handleError(handler,XSLTErrorResources.INVALID_ENUM,new Object[]{name, value, enumNamesList.toString() },null); 
+               return null;
+        
+	        }            
+        }
+        catch (IllegalArgumentException ie) 
+        {
+           StringBuffer enumNamesList = getListOfEnums();
+           enumNamesList.append(" <qname-but-not-ncname>");
+           
+           handleError(handler,XSLTErrorResources.INVALID_ENUM,new Object[]{name, value, enumNamesList.toString() },ie); 
+           return null;
+
+        }
+        catch (RuntimeException re)
+        {
+           StringBuffer enumNamesList = getListOfEnums();
+           enumNamesList.append(" <qname-but-not-ncname>");
+
+           handleError(handler,XSLTErrorResources.INVALID_ENUM,new Object[]{name, value, enumNamesList.toString() },re); 
+           return null;
+        }    
+  	}
+  	
+  	return objToReturn;
   }
 
   /**
@@ -566,13 +786,14 @@ public class XSLTAttributeDef
    * string contains a syntax error.
    */
   Object processEXPR(
-          StylesheetHandler handler, String uri, String name, String rawName, String value)
+          StylesheetHandler handler, String uri, String name, String rawName, String value,
+          ElemTemplateElement owner)
             throws org.xml.sax.SAXException
   {
 
     try
     {
-      XPath expr = handler.createXPath(value);
+      XPath expr = handler.createXPath(value, owner);
 
       return expr;
     }
@@ -593,11 +814,37 @@ public class XSLTAttributeDef
    * @param rawName The qualified name (with prefix).
    * @param value A NMTOKEN string.
    *
-   * @return the value argument.
+   * @return the value argument or an AVT if this attribute supports AVTs.
+   * 
+   * @throws org.xml.sax.SAXException if the value is not a valid nmtoken
    */
   Object processNMTOKEN(StylesheetHandler handler, String uri, String name,
-                        String rawName, String value)
+                        String rawName, String value, ElemTemplateElement owner)
+             throws org.xml.sax.SAXException
   {
+  	
+  	if (getSupportsAVT()) {
+	    try
+	    {
+	      AVT avt = new AVT(handler, uri, name, rawName, value, owner);
+	
+		  // If an AVT wasn't used, validate the value
+		  if ((avt.isSimple()) && (!XMLChar.isValidNmtoken(value))) {
+            handleError(handler,XSLTErrorResources.INVALID_NMTOKEN, new Object[] {name,value},null);
+            return null;
+		  }	
+	      return avt;
+	    }
+	    catch (TransformerException te)
+	    {
+	      throw new org.xml.sax.SAXException(te);
+	    }  		
+  	} else {
+  		if (!XMLChar.isValidNmtoken(value)) {
+            handleError(handler,XSLTErrorResources.INVALID_NMTOKEN, new Object[] {name,value},null);
+            return null;
+  		}
+  	}	  			
     return value;
   }
 
@@ -618,13 +865,14 @@ public class XSLTAttributeDef
    * string contains a syntax error.
    */
   Object processPATTERN(
-          StylesheetHandler handler, String uri, String name, String rawName, String value)
+          StylesheetHandler handler, String uri, String name, String rawName, String value,
+          ElemTemplateElement owner)
             throws org.xml.sax.SAXException
   {
 
     try
     {
-      XPath pattern = handler.createMatchPatternXPath(value);
+      XPath pattern = handler.createMatchPatternXPath(value, owner);
 
       return pattern;
     }
@@ -635,7 +883,7 @@ public class XSLTAttributeDef
   }
 
   /**
-   * Process an attribute string of type T_PRIORITY into
+   * Process an attribute string of type T_NUMBER into
    * a double value.
    *
    * @param handler non-null reference to current StylesheetHandler that is constructing the Templates.
@@ -643,6 +891,7 @@ public class XSLTAttributeDef
    * @param name The local name (without prefix), or empty string if not namespace processing.
    * @param rawName The qualified name (with prefix).
    * @param value A string that can be parsed into a double value.
+   * @param number
    *
    * @return A Double object.
    *
@@ -650,49 +899,208 @@ public class XSLTAttributeDef
    * {@link javax.xml.transform.TransformerException}
    * if the string does not contain a parsable number.
    */
-  Object processPRIORITY(
-          StylesheetHandler handler, String uri, String name, String rawName, String value)
+  Object processNUMBER(
+          StylesheetHandler handler, String uri, String name, String rawName, String value, ElemTemplateElement owner)
             throws org.xml.sax.SAXException
   {
 
-    try
-    {
-      return Double.valueOf(value);
-    }
-    catch (NumberFormatException nfe)
-    {
-      handler.error(XSLTErrorResources.ER_PRIORITY_NOT_PARSABLE, null, nfe);//"Priority value does not contain a parsable number.",
-                    //nfe);
 
-      return new Double(0.0);
-    }
+	if (getSupportsAVT()) 
+	{
+		Double val;
+		AVT avt = null;
+	    try
+	    {
+	      avt = new AVT(handler, uri, name, rawName, value, owner);
+	      
+	      // If this attribute used an avt, then we can't validate at this time.
+	      if (avt.isSimple()) 
+	      {
+	      	val = Double.valueOf(value);
+	      }
+	    }
+	    catch (TransformerException te)
+	    {
+	      throw new org.xml.sax.SAXException(te);
+	    } 
+	    catch (NumberFormatException nfe)
+	    {
+	     	handleError(handler,XSLTErrorResources.INVALID_NUMBER, new Object[] {name, value}, nfe);
+            return null;
+	    }
+	    return avt;
+	
+	} 
+	else
+    {
+	    try
+	    {
+	      return Double.valueOf(value);
+	    }
+	    catch (NumberFormatException nfe)
+	    {
+            handleError(handler,XSLTErrorResources.INVALID_NUMBER, new Object[] {name, value}, nfe);
+            return null;
+	    }
+    }    
   }
 
   /**
-   * Process an attribute string of type T_QNAME into
-   * a QName value.
+   * Process an attribute string of type T_QNAME into a QName value.
    *
    * @param handler non-null reference to current StylesheetHandler that is constructing the Templates.
    * @param uri The Namespace URI, or an empty string.
    * @param name The local name (without prefix), or empty string if not namespace processing.
    * @param rawName The qualified name (with prefix).
    * @param value A string that represents a potentially prefix qualified name.
+   * @param owner
    *
-   * @return A QName object.
+   * @return A QName object if this attribute does not support AVT's.  Otherwise, an AVT
+   *         is returned.
    *
    * @throws org.xml.sax.SAXException if the string contains a prefix that can not be
    * resolved, or the string contains syntax that is invalid for a qualified name.
    */
   Object processQNAME(
-          StylesheetHandler handler, String uri, String name, String rawName, String value)
+          StylesheetHandler handler, String uri, String name, String rawName, String value, ElemTemplateElement owner)
             throws org.xml.sax.SAXException
   {
-    return new QName(value, handler);
-  }
+
+     try 
+        {	
+   	      QName qname = new QName(value, handler, true);
+          return qname;
+        }
+        catch (IllegalArgumentException ie)
+        {
+            // thrown by QName constructor
+            handleError(handler,XSLTErrorResources.INVALID_QNAME, new Object[] {name, value},ie);
+            return null;
+        }
+        catch (RuntimeException re) {
+            // thrown by QName constructor
+            handleError(handler,XSLTErrorResources.INVALID_QNAME, new Object[] {name, value},re);
+            return null;
+        }
+  	}
+ 
 
   /**
-   * Process an attribute string of type T_QNAMES into
-   * a vector of QNames.
+   * Process an attribute string of type T_QNAME into a QName value.
+   *
+   * @param handler non-null reference to current StylesheetHandler that is constructing the Templates.
+   * @param uri The Namespace URI, or an empty string.
+   * @param name The local name (without prefix), or empty string if not namespace processing.
+   * @param rawName The qualified name (with prefix).
+   * @param value A string that represents a potentially prefix qualified name.
+   * @param owner
+   *
+   * @return An AVT is returned.
+   *
+   * @throws org.xml.sax.SAXException if the string contains a prefix that can not be
+   * resolved, or the string contains syntax that is invalid for a qualified name.
+   */
+  Object processAVT_QNAME(
+          StylesheetHandler handler, String uri, String name, String rawName, String value, ElemTemplateElement owner)
+            throws org.xml.sax.SAXException
+  {
+
+       AVT avt = null;
+       try
+       {
+          avt = new AVT(handler, uri, name, rawName, value, owner);
+    
+          // If an AVT wasn't used, validate the value
+          if (avt.isSimple())
+          {
+             int indexOfNSSep = value.indexOf(':');
+
+             if (indexOfNSSep >= 0) 
+             {   
+                  String prefix = value.substring(0, indexOfNSSep);
+                  if (!XMLChar.isValidNCName(prefix))
+                  {
+                     handleError(handler,XSLTErrorResources.INVALID_QNAME,new Object[]{name,value },null);
+                     return null;
+                  }
+             }
+                 
+             String localName =  (indexOfNSSep < 0)
+                 ? value : value.substring(indexOfNSSep + 1); 
+             
+             if ((localName == null) || (localName.length() == 0) ||
+                 (!XMLChar.isValidNCName(localName)))
+             {    
+                     handleError(handler,XSLTErrorResources.INVALID_QNAME,new Object[]{name,value },null );
+                     return null;
+             }
+          }  
+        }
+        catch (TransformerException te)
+        {
+           // thrown by AVT constructor
+          throw new org.xml.sax.SAXException(te);
+        } 
+    
+    return avt;
+ }
+
+  /**
+   * Process an attribute string of type NCName into a String
+   *
+   * @param handler non-null reference to current StylesheetHandler that is constructing the Templates.
+   * @param uri The Namespace URI, or an empty string.
+   * @param name The local name (without prefix), or empty string if not namespace processing.
+   * @param rawName The qualified name (with prefix).
+   * @param value A string that represents a potentially prefix qualified name.
+   * @param owner
+   *
+   * @return A String object if this attribute does not support AVT's.  Otherwise, an AVT
+   *         is returned.
+   *
+   * @throws org.xml.sax.SAXException if the string contains a prefix that can not be
+   * resolved, or the string contains syntax that is invalid for a NCName.
+   */
+  Object processNCNAME(
+          StylesheetHandler handler, String uri, String name, String rawName, String value, ElemTemplateElement owner)
+            throws org.xml.sax.SAXException
+  {
+    
+    if (getSupportsAVT()) 
+    {
+        AVT avt = null;
+        try
+        {
+          avt = new AVT(handler, uri, name, rawName, value, owner);
+    
+          // If an AVT wasn't used, validate the value
+          if ((avt.isSimple()) &&  (!XMLChar.isValidNCName(value))) 
+          {
+             handleError(handler,XSLTErrorResources.INVALID_NCNAME,new Object[] {name,value},null);
+             return null;
+          }      
+          return avt;
+        }
+        catch (TransformerException te)
+        {
+           // thrown by AVT constructor
+          throw new org.xml.sax.SAXException(te);
+        } 
+        
+    } else {
+        if (!XMLChar.isValidNCName(value)) 
+        {
+            handleError(handler,XSLTErrorResources.INVALID_NCNAME,new Object[] {name,value},null);
+            return null;
+        }
+        return value;
+    }
+ }
+
+  /**
+   * Process an attribute string of type T_QNAMES into a vector of QNames where
+   * the specification requires that non-prefixed elements not be placed in a
+   * namespace.  (See section 2.4 of XSLT 1.0.)
    *
    * @param handler non-null reference to current StylesheetHandler that is constructing the Templates.
    * @param uri The Namespace URI, or an empty string.
@@ -724,6 +1132,47 @@ public class XSLTAttributeDef
     return qnames;
   }
 
+ /**
+   * Process an attribute string of type T_QNAMES_RESOLVE_NULL into a vector
+   * of QNames where the specification requires non-prefixed elements to be
+   * placed in the default namespace.  (See section 16 of XSLT 1.0; the
+   * <em>only</em> time that this will get called is for the
+   * <code>cdata-section-elements</code> attribute on <code>xsl:output</code>.
+   *
+   * @param handler non-null reference to current StylesheetHandler that is constructing the Templates.
+   * @param uri The Namespace URI, or an empty string.
+   * @param name The local name (without prefix), or empty string if not namespace processing.
+   * @param rawName The qualified name (with prefix).
+   * @param value A whitespace delimited list of qualified names.
+   *
+   * @return a Vector of QName objects.
+   *
+   * @throws org.xml.sax.SAXException if the one of the qualified name strings
+   * contains a prefix that can not be resolved, or a qualified name contains
+   * syntax that is invalid for a qualified name.
+   */
+  final Vector processQNAMESRNU(StylesheetHandler handler, String uri,
+    String name, String rawName, String value)
+    throws org.xml.sax.SAXException
+  {
+
+    StringTokenizer tokenizer = new StringTokenizer(value, " \t\n\r\f");
+    int nQNames = tokenizer.countTokens();
+    Vector qnames = new Vector(nQNames);
+
+    String defaultURI = handler.getNamespaceForPrefix("");
+    for (int i = 0; i < nQNames; i++)
+    {
+      String tok = tokenizer.nextToken();
+      if (tok.indexOf(':') == -1) {
+        qnames.addElement(new QName(defaultURI,tok));
+      } else {
+        qnames.addElement(new QName(tok, handler));
+      }
+    }
+    return qnames;
+  }
+
   /**
    * Process an attribute string of type T_SIMPLEPATTERNLIST into
    * a vector of XPath match patterns.
@@ -741,7 +1190,8 @@ public class XSLTAttributeDef
    * strings contains a syntax error.
    */
   Vector processSIMPLEPATTERNLIST(
-          StylesheetHandler handler, String uri, String name, String rawName, String value)
+          StylesheetHandler handler, String uri, String name, String rawName, String value,
+          ElemTemplateElement owner)
             throws org.xml.sax.SAXException
   {
 
@@ -754,7 +1204,7 @@ public class XSLTAttributeDef
       for (int i = 0; i < nPatterns; i++)
       {
         XPath pattern =
-          handler.createMatchPatternXPath(tokenizer.nextToken());
+          handler.createMatchPatternXPath(tokenizer.nextToken(), owner);
 
         patterns.addElement(pattern);
       }
@@ -823,7 +1273,11 @@ public class XSLTAttributeDef
       String prefix = tokenizer.nextToken();
       String url = handler.getNamespaceForPrefix(prefix);
 
-      strings.addElement(url);
+      if (url != null)
+        strings.addElement(url);
+      else
+        throw new org.xml.sax.SAXException(XSLMessages.createMessage(XSLTErrorResources.ER_CANT_RESOLVE_NSPREFIX, new Object[] {prefix}));
+    
     }
 
     return strings;
@@ -839,19 +1293,40 @@ public class XSLTAttributeDef
    * @param rawName The qualified name (with prefix).
    * @param value non-null string that conforms to the URL syntax.
    *
-   * @return The non-absolutized URL argument, in other words, the value argument.
+   * @return The non-absolutized URL argument, in other words, the value argument.  If this 
+   *         attribute supports AVT, an AVT is returned.
    *
    * @throws org.xml.sax.SAXException if the URL does not conform to the URL syntax.
    */
-  String processURL(
-          StylesheetHandler handler, String uri, String name, String rawName, String value)
+  Object processURL(
+          StylesheetHandler handler, String uri, String name, String rawName, String value, ElemTemplateElement owner)
             throws org.xml.sax.SAXException
   {
 
+    if (getSupportsAVT()) {
+	    try
+	    {
+	      AVT avt = new AVT(handler, uri, name, rawName, value, owner);
+	
+		  // If an AVT wasn't used, validate the value
+		 // if (avt.getSimpleString() != null) {
+			   // TODO: syntax check URL value.
+			    // return SystemIDResolver.getAbsoluteURI(value, 
+			    //                                         handler.getBaseIdentifier());
+		  //}	
+	      return avt;
+	    }
+	    catch (TransformerException te)
+	    {
+	      throw new org.xml.sax.SAXException(te);
+	    }  		
+     } else {
     // TODO: syntax check URL value.
     // return SystemIDResolver.getAbsoluteURI(value, 
     //                                         handler.getBaseIdentifier());
-    return value;
+     	
+	    return value;
+    }
   }
 
   /**
@@ -875,10 +1350,12 @@ public class XSLTAttributeDef
 
     // Is this already checked somewhere else?  -sb
     if (!(value.equals("yes") || value.equals("no")))
-      handler.error(XSLTErrorResources.ER_VALUE_SHOULD_EQUAL, new Object[]{name}, null);//"Value for " + name + " should equal 'yes' or 'no'",
-                    //null);
-
-    return new Boolean(value.equals("yes") ? true : false);
+    {
+      handleError(handler, XSLTErrorResources.INVALID_BOOLEAN, new Object[] {name,value}, null);
+      return null;
+   }
+ 
+     return new Boolean(value.equals("yes") ? true : false);
   }
 
   /**
@@ -895,7 +1372,8 @@ public class XSLTAttributeDef
    * @throws org.xml.sax.SAXException if the attribute value can not be processed.
    */
   Object processValue(
-          StylesheetHandler handler, String uri, String name, String rawName, String value)
+          StylesheetHandler handler, String uri, String name, String rawName, String value,
+          ElemTemplateElement owner)
             throws org.xml.sax.SAXException
   {
 
@@ -905,41 +1383,44 @@ public class XSLTAttributeDef
     switch (type)
     {
     case T_AVT :
-      processedValue = processAVT(handler, uri, name, rawName, value);
+      processedValue = processAVT(handler, uri, name, rawName, value, owner);
       break;
     case T_CDATA :
-      processedValue = processCDATA(handler, uri, name, rawName, value);
+      processedValue = processCDATA(handler, uri, name, rawName, value, owner);
       break;
     case T_CHAR :
-      processedValue = processCHAR(handler, uri, name, rawName, value);
+      processedValue = processCHAR(handler, uri, name, rawName, value, owner);
       break;
     case T_ENUM :
-      processedValue = processENUM(handler, uri, name, rawName, value);
+      processedValue = processENUM(handler, uri, name, rawName, value, owner);
       break;
     case T_EXPR :
-      processedValue = processEXPR(handler, uri, name, rawName, value);
+      processedValue = processEXPR(handler, uri, name, rawName, value, owner);
       break;
     case T_NMTOKEN :
-      processedValue = processNMTOKEN(handler, uri, name, rawName, value);
+      processedValue = processNMTOKEN(handler, uri, name, rawName, value, owner);
       break;
     case T_PATTERN :
-      processedValue = processPATTERN(handler, uri, name, rawName, value);
+      processedValue = processPATTERN(handler, uri, name, rawName, value, owner);
       break;
-    case T_PRIORITY :
-      processedValue = processPRIORITY(handler, uri, name, rawName, value);
+    case T_NUMBER :
+      processedValue = processNUMBER(handler, uri, name, rawName, value, owner);
       break;
     case T_QNAME :
-      processedValue = processQNAME(handler, uri, name, rawName, value);
+      processedValue = processQNAME(handler, uri, name, rawName, value, owner);
       break;
     case T_QNAMES :
       processedValue = processQNAMES(handler, uri, name, rawName, value);
       break;
+	case T_QNAMES_RESOLVE_NULL:
+      processedValue = processQNAMESRNU(handler, uri, name, rawName, value);
+      break;
     case T_SIMPLEPATTERNLIST :
       processedValue = processSIMPLEPATTERNLIST(handler, uri, name, rawName,
-                                                value);
+                                                value, owner);
       break;
     case T_URL :
-      processedValue = processURL(handler, uri, name, rawName, value);
+      processedValue = processURL(handler, uri, name, rawName, value, owner);
       break;
     case T_YESNO :
       processedValue = processYESNO(handler, uri, name, rawName, value);
@@ -951,6 +1432,15 @@ public class XSLTAttributeDef
       processedValue = processPREFIX_URLLIST(handler, uri, name, rawName,
                                              value);
       break;
+    case T_ENUM_OR_PQNAME :
+    	processedValue = processENUM_OR_PQNAME(handler, uri, name, rawName, value, owner);
+    	break;
+    case T_NCNAME :
+        processedValue = processNCNAME(handler, uri, name, rawName, value, owner);
+        break;
+    case T_AVT_QNAME :
+        processedValue = processAVT_QNAME(handler, uri, name, rawName, value, owner);
+        break;
     default :
     }
 
@@ -966,7 +1456,7 @@ public class XSLTAttributeDef
    * @throws org.xml.sax.SAXException wraps an invocation exception if the
    * setter method can not be invoked on the object.
    */
-  void setDefAttrValue(StylesheetHandler handler, Object elem)
+  void setDefAttrValue(StylesheetHandler handler, ElemTemplateElement elem)
           throws org.xml.sax.SAXException
   {
     setAttrValue(handler, this.getNamespace(), this.getName(),
@@ -1028,6 +1518,26 @@ public class XSLTAttributeDef
 
     return cl;
   }
+  
+  /**
+   * StringBuffer containing comma delimited list of valid values for ENUM type.
+   * Used to build error message.
+   */
+  private StringBuffer getListOfEnums() 
+  {
+     StringBuffer enumNamesList = new StringBuffer();            
+     String [] enumValues = this.getEnumNames();
+
+     for (int i = 0; i < enumValues.length; i++)
+     {
+        if (i > 0)
+        {
+           enumNamesList.append(' ');
+        }
+        enumNamesList.append(enumValues[i]);
+    }        
+    return enumNamesList;
+  }
 
   /**
    * Set a value on an attribute.
@@ -1041,12 +1551,13 @@ public class XSLTAttributeDef
    *
    * @throws org.xml.sax.SAXException
    */
-  void setAttrValue(
-          StylesheetHandler handler, String attrUri, String attrLocalName, String attrRawName, String attrValue, Object elem)
+  boolean setAttrValue(
+          StylesheetHandler handler, String attrUri, String attrLocalName, 
+          String attrRawName, String attrValue, ElemTemplateElement elem)
             throws org.xml.sax.SAXException
   {
     if(attrRawName.equals("xmlns") || attrRawName.startsWith("xmlns:"))
-      return;
+      return true;
       
     String setterString = getSetterMethodName();
 
@@ -1076,7 +1587,10 @@ public class XSLTAttributeDef
         else
         {
           Object value = processValue(handler, attrUri, attrLocalName,
-                                      attrRawName, attrValue);
+                                      attrRawName, attrValue, elem);
+          // If a warning was issued because the value for this attribute was
+          // invalid, then the value will be null.  Just return
+          if (null == value) return false;
                                       
           // First try to match with the primative value.
           Class[] argTypes = new Class[]{ getPrimativeClass(value) };
@@ -1101,17 +1615,39 @@ public class XSLTAttributeDef
       }
       catch (NoSuchMethodException nsme)
       {
-        if (!setterString.equals(S_FOREIGNATTR_SETTER))
+        if (!setterString.equals(S_FOREIGNATTR_SETTER)) 
+        {
           handler.error(XSLTErrorResources.ER_FAILED_CALLING_METHOD, new Object[]{setterString}, nsme);//"Failed calling " + setterString + " method!", nsme);
+          return false;
+        }
       }
       catch (IllegalAccessException iae)
       {
         handler.error(XSLTErrorResources.ER_FAILED_CALLING_METHOD, new Object[]{setterString}, iae);//"Failed calling " + setterString + " method!", iae);
+        return false;
       }
       catch (InvocationTargetException nsme)
       {
-        handler.error(XSLTErrorResources.ER_FAILED_CALLING_METHOD, new Object[]{setterString}, nsme);//"Failed calling " + setterString + " method!", nsme);
+        handleError(handler, XSLTErrorResources.WG_ILLEGAL_ATTRIBUTE_VALUE,
+            new Object[]{ Constants.ATTRNAME_NAME, getName()}, nsme);
+        return false;
       }
+    }
+    
+    return true;
+  }
+  
+  private void handleError(StylesheetHandler handler, String msg, Object [] args, Exception exc) throws org.xml.sax.SAXException
+  {
+    switch (getErrorType()) 
+    {
+        case (FATAL):
+        case (ERROR):
+                handler.error(msg, args, exc);          
+                break;
+        case (WARNING):
+                handler.warn(msg, args);       
+        default: break;
     }
   }
 }
